# act-starryos-rk3588-rust

./: .gitignore  AI使用声明.md  README.md  基础版本与增量贡献.md  第三方来源与许可.md
board/: README.md  fetch_runtime.sh
board/act-rknn/: Cargo.toml  build.rs
board/act-rknn/.cargo/: config.toml
board/act-rknn/src/: main.rs  rknn_sys.rs
data/: README.txt
model/: README.txt
results/: 666帧_QEMU-StarryOS_开环.csv  666帧_QEMU-StarryOS_闭环.csv  666帧_原模型_fp32.csv  666帧_原模型_fp32_开环.csv  666帧_原模型_fp32_闭环.csv  666帧_板子-StarryOS真NPU_RGBPack_开环.csv  666帧_板子-StarryOS真NPU_RGBPack_闭环.csv  board_fp16_rk3588.txt  board_rk3588_real.md  ref_fp32.csv  sim_fp16.csv  sim_hybrid_backbone.csv  sim_int8.csv
scripts/: package_board.sh  prepare_qemu_666_disk.sh
starryos_npu/: README.md  RESULT_starryos_board.md  上板调试历程.md  如何重建镜像.md
starryos_npu/app/: assemble_payload.sh  board-orangepi-5-plus-act.toml  build_sd_image.sh  init.sh  inject_rootfs.sh  orangepi-5-plus.nobootargs.dtb  verify_qemu.sh
starryos_npu/deliverable/: README.md  烧录与启动说明.md
starryos_npu/research/: DRIVER_DESIGN.md
starryos_npu/sdcard/: EXPECTED.csv  烧录与运行手册.md
tools/: _onnx_compat.py  convert_and_sim.py  eval_reference.py  export_rknn_onnx.py  gen_inputs.py  hybrid_propose.py  hybrid_step1.py  hybrid_step2.py  make_gif_from_csv.py  quant_sweep.py  run_666_qemu_protocol.py  run_666_原模型_fp32.py
